refactor: Mapstruct