@@ -1,25 +1,26 @@
 package com.infodif.car_data_analysis.service;
 
-import com.infodif.car_data_analysis.dto.CarFilterDTO;
-import com.infodif.car_data_analysis.dto.CarResponseDTO;
-import com.infodif.car_data_analysis.dto.UpdateCarRequestDTO;
+import com.infodif.car_data_analysis.dto.*;
 import com.infodif.car_data_analysis.entity.*;
+import com.infodif.car_data_analysis.mapper.CarMapper;
+import com.infodif.car_data_analysis.mapper.CarUpdateApprovalMapper;
+import com.infodif.car_data_analysis.mapper.TransactionMapper;
 import com.infodif.car_data_analysis.repository.*;
 import jakarta.persistence.criteria.Predicate;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class PurchaseService {
 
     private final CarRepository carRepository;
@@ -27,32 +28,35 @@ public class PurchaseService {
     private final UserRepository userRepository;
     private final TransactionRepository transactionRepository;
 
+    private final CarMapper carMapper;
+    private final CarUpdateApprovalMapper approvalMapper;
+    private final TransactionMapper transactionMapper;
+
     @Transactional
     public String buyCar(String username, Long carId) {
         Car car = carRepository.findById(carId)
-                .orElseThrow(() -> new RuntimeException("Araç bulunamadı!"));
+                .orElseThrow(() -> new RuntimeException("Car cannot found!"));
 
         User buyer = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("Kullanıcı bulunamadı!"));
+                .orElseThrow(() -> new RuntimeException("User cannot found!"));
 
         boolean isBrandNew = car.getOwner() == null;
         boolean isOnSale = "ON_SALE".equals(car.getStatus());
 
         if (!isBrandNew && !isOnSale) {
-            throw new RuntimeException("Bu araç şu an satılık değil!");
+            throw new RuntimeException("This car is not for sale!");
         }
 
         if (car.getOwner() != null && car.getOwner().getUsername().equals(username)) {
-            throw new RuntimeException("Zaten kendi aracınızı satın alamazsınız!");
+            throw new RuntimeException("You cannot purchase your own car!");
         }
 
         BigDecimal carPrice = BigDecimal.valueOf(car.getPrice());
         if (buyer.getBalance().compareTo(carPrice) < 0) {
-            throw new RuntimeException("Bakiyeniz yetersiz!");
+            throw new RuntimeException("Your balance is insufficient!");
         }
 
         String sellerName = (car.getOwner() != null) ? car.getOwner().getUsername() : "GALLERY";
-
         buyer.setBalance(buyer.getBalance().subtract(carPrice));
 
         if (car.getOwner() != null) {
@@ -61,18 +65,17 @@ public class PurchaseService {
             userRepository.save(oldOwner);
         }
 
-        Transaction transaction = Transaction.builder()
-                .carId(car.getId())
-                .sellerName(sellerName)
-                .buyerName(buyer.getUsername())
-                .manufacturer(car.getManufacturer())
-                .model(car.getModel())
-                .year(car.getYear())
-                .color(car.getColor())
-                .mileage(car.getMileage())
-                .price(carPrice.doubleValue())
-                .saleDate(LocalDateTime.now())
-                .build();
+        Transaction transaction = new Transaction(
+                car.getId(),
+                sellerName,
+                buyer.getUsername(),
+                car.getManufacturer(),
+                car.getModel(),
+                car.getColor(),
+                car.getYear(),
+                car.getMileage(),
+                carPrice.doubleValue()
+        );
 
         transactionRepository.save(transaction);
 
@@ -82,20 +85,20 @@ public class PurchaseService {
         carRepository.save(car);
         userRepository.save(buyer);
 
-        return "Araç başarıyla satın alındı!";
+        return "Car purchased!";
     }
 
     @Transactional
     public String createUpdateRequest(UpdateCarRequestDTO dto) {
         if (dto.newPrice() == null && dto.newColor() == null && dto.newMileage() == null) {
-            throw new RuntimeException("Fiyat, Renk veya Kilometre alanlarından en az biri doldurulmalıdır!");
+            throw new RuntimeException("Price, color or mileage should be filled!");
         }
 
         User user = userRepository.findByUsername(dto.username())
-                .orElseThrow(() -> new RuntimeException("Kullanıcı bulunamadı!"));
+                .orElseThrow(() -> new RuntimeException("User cannot found!"));
 
         Car car = carRepository.findById(dto.carId())
-                .orElseThrow(() -> new RuntimeException("Araç bulunamadı!"));
+                .orElseThrow(() -> new RuntimeException("Car cannot found!"));
 
         if (user.getRole() == Role.ROLE_MODERATOR) {
             if (car.getOwner() != null && car.getOwner().getUsername().equals(dto.username())) {
@@ -103,7 +106,7 @@ public class PurchaseService {
                 if (dto.newColor() != null) car.setColor(dto.newColor());
                 if (dto.newMileage() != null) car.setMileage(dto.newMileage());
                 carRepository.save(car);
-                return "Sayın Moderatör, aracınız anında güncellendi!";
+                return "Dear Moderator, your car is updated!";
             }
         }
 
@@ -111,22 +114,20 @@ public class PurchaseService {
                 .stream().anyMatch(req -> req.getCarId().equals(dto.carId()));
 
         if (alreadyPending) {
-            throw new RuntimeException("Bu araç için zaten onay bekleyen bir güncelleme isteğiniz var!");
+            throw new RuntimeException("There is an already an approval request for this car!");
         }
 
-        CarUpdateApproval approval = CarUpdateApproval.builder()
-                .carId(dto.carId())
-                .username(dto.username())
-                .requestedBy(user) // 👈 DÜZELTME BURADA: User entity'si veritabanı ilişkisi için eklendi
-                .newPrice(dto.newPrice()) // Frontend'den newPrice olarak gelmeli
-                .newColor(dto.newColor())
-                .newMileage(dto.newMileage())
-                .status(ApprovalStatus.PENDING)
-                .requestDate(LocalDateTime.now())
-                .build();
+        CarUpdateApproval approval = new CarUpdateApproval(
+                dto.carId(),
+                dto.username(),
+                user,
+                dto.newPrice(),
+                dto.newColor(),
+                dto.newMileage()
+        );
 
         approvalRepository.save(approval);
-        return "Güncelleme talebi başarıyla oluşturuldu, moderatör onayı bekleniyor.";
+        return "Approval request has been sent, it is waiting for an approval.";
     }
 
     @Transactional
@@ -135,10 +136,10 @@ public class PurchaseService {
         CarUpdateApproval targetRequest = requests.stream()
                 .filter(req -> req.getCarId().equals(carId))
                 .findFirst()
-                .orElseThrow(() -> new RuntimeException("Bu araç için bekleyen bir güncelleme isteği bulunamadı!"));
+                .orElseThrow(() -> new RuntimeException("Approval request cannot found for this car!"));
 
         approvalRepository.delete(targetRequest);
-        return "Güncelleme isteği geri çekildi.";
+        return "Approval request has been deleted.";
     }
 
     public List<CarResponseDTO> getMyCars(String username, String status, CarFilterDTO filter) {
@@ -162,86 +163,78 @@ public class PurchaseService {
                 if (filter.color() != null && !filter.color().isEmpty()) {
                     predicates.add(cb.like(cb.lower(root.get("color")), "%" + filter.color().toLowerCase() + "%"));
                 }
-                if (filter.minYear() != null) {
-                    predicates.add(cb.greaterThanOrEqualTo(root.get("year"), filter.minYear()));
-                }
-                if (filter.maxYear() != null) {
-                    predicates.add(cb.lessThanOrEqualTo(root.get("year"), filter.maxYear()));
-                }
-                if (filter.minPrice() != null) {
-                    predicates.add(cb.greaterThanOrEqualTo(root.get("price"), filter.minPrice()));
-                }
-                if (filter.maxPrice() != null) {
-                    predicates.add(cb.lessThanOrEqualTo(root.get("price"), filter.maxPrice()));
-                }
+                if (filter.minYear() != null) predicates.add(cb.greaterThanOrEqualTo(root.get("year"), filter.minYear()));
+                if (filter.maxYear() != null) predicates.add(cb.lessThanOrEqualTo(root.get("year"), filter.maxYear()));
+                if (filter.minPrice() != null) predicates.add(cb.greaterThanOrEqualTo(root.get("price"), filter.minPrice()));
+                if (filter.maxPrice() != null) predicates.add(cb.lessThanOrEqualTo(root.get("price"), filter.maxPrice()));
             }
             return cb.and(predicates.toArray(new Predicate[0]));
         };
 
         return carRepository.findAll(spec)
                 .stream()
-                .map(this::mapToCarResponseDTO)
-                .collect(Collectors.toList());
+                .map(car -> {
+                    CarResponseDTO dto = carMapper.toResponseDto(car);
+                    boolean hasPending = approvalRepository.findByUsernameAndStatus(
+                                    car.getOwner() != null ? car.getOwner().getUsername() : "", ApprovalStatus.PENDING)
+                            .stream().anyMatch(p -> p.getCarId().equals(car.getId()));
+
+                    return new CarResponseDTO(
+                            dto.id(), dto.manufacturer(), dto.model(), dto.year(), dto.color(),
+                            dto.price(), dto.mileage(), dto.status(), dto.isUsed(), hasPending
+                    );
+                })
+                .toList();
     }
 
     @Transactional
     public String listForSale(String username, Long carId) {
-        Car car = carRepository.findById(carId).orElseThrow(() -> new RuntimeException("Araç bulunamadı!"));
+        Car car = carRepository.findById(carId).orElseThrow(() -> new RuntimeException("Car cannot found!"));
         if (car.getOwner() == null || !car.getOwner().getUsername().equals(username)) {
-            throw new RuntimeException("Yetkisiz işlem!");
+            throw new RuntimeException("You do not have permission for this!");
         }
         car.setStatus("ON_SALE");
         carRepository.save(car);
-        return "Araç satışa çıkarıldı!";
+        return "Car is on sale!";
     }
 
     @Transactional
     public String cancelSale(String username, Long carId) {
-        Car car = carRepository.findById(carId).orElseThrow(() -> new RuntimeException("Araç bulunamadı!"));
+        Car car = carRepository.findById(carId).orElseThrow(() -> new RuntimeException("Car cannot found!"));
         if (car.getOwner() == null || !car.getOwner().getUsername().equals(username)) {
-            throw new RuntimeException("Yetkisiz işlem!");
+            throw new RuntimeException("You do not have permission for this!");
         }
         car.setStatus("OWNED");
         carRepository.save(car);
-        return "Satış iptal edildi, araç galerinizde.";
+        return "Sale is cancelled";
     }
 
-    public List<CarResponseDTO> getSoldHistory(String username) {
+    public List<TransactionDTO> getSoldHistory(String username) {
         List<Transaction> transactions = transactionRepository.findAllBySellerNameIgnoreCaseOrderBySaleDateDesc(username);
-        return transactions.stream().map(t -> CarResponseDTO.builder()
-                .id(t.getCarId())
-                .manufacturer(t.getManufacturer())
-                .model(t.getModel())
-                .year(t.getYear())
-                .price(t.getPrice().doubleValue())
-                .color(t.getColor())
-                .mileage(t.getMileage())
-                .status("SOLD")
-                .isUsed(true)
-                .build()
-        ).collect(Collectors.toList());
+        return transactions.stream()
+                .map(transactionMapper::toDto)
+                .toList();
     }
 
     public List<UpdateCarRequestDTO> getAllPendingApprovals() {
         return approvalRepository.findByStatus(ApprovalStatus.PENDING)
-                .stream().map(this::mapToDTO).collect(Collectors.toList());
+                .stream()
+                .map(approval -> {
+                    Car car = carRepository.findById(approval.getCarId()).orElse(null);
+                    return approvalMapper.toDto(approval, car);
+                })
+                .toList();
     }
 
     @Transactional
     public String approveCarUpdate(Long approvalId) {
         CarUpdateApproval approval = approvalRepository.findById(approvalId)
-                .orElseThrow(() -> new RuntimeException("İstek bulunamadı!"));
+                .orElseThrow(() -> new RuntimeException("Request cannot found!"));
 
         Car car = carRepository.findById(approval.getCarId())
-                .orElseThrow(() -> new RuntimeException("Araç bulunamadı!"));
+                .orElseThrow(() -> new RuntimeException("Car cannot found!"));
 
-        // 🚨 SAHİPLİK KONTROLÜ (GÜNCELLENDİ)
-        boolean isOwnerChanged = false;
-        if (car.getOwner() == null) {
-            isOwnerChanged = true; // Araç galeriye düşmüş
-        } else if (!car.getOwner().getUsername().equals(approval.getUsername())) {
-            isOwnerChanged = true; // Araç başkasına satılmış
-        }
+        boolean isOwnerChanged = (car.getOwner() == null) || !car.getOwner().getUsername().equals(approval.getUsername());
 
         if (isOwnerChanged) {
             approvalRepository.delete(approval);
@@ -252,7 +245,6 @@ public class PurchaseService {
         if (approval.getNewColor() != null) car.setColor(approval.getNewColor());
         if (approval.getNewMileage() != null) car.setMileage(approval.getNewMileage());
 
-        approval.setStatus(ApprovalStatus.APPROVED);
         carRepository.save(car);
         approvalRepository.delete(approval);
 
@@ -262,59 +254,18 @@ public class PurchaseService {
     @Transactional
     public String rejectCarUpdate(Long approvalId) {
         CarUpdateApproval approval = approvalRepository.findById(approvalId)
-                .orElseThrow(() -> new RuntimeException("İstek bulunamadı!"));
-        approval.setStatus(ApprovalStatus.REJECTED);
-        approvalRepository.delete(approval); // veya status update
-        return "Reddedildi.";
+                .orElseThrow(() -> new RuntimeException("Request cannot found!"));
+        approvalRepository.delete(approval);
+        return "Rejected.";
     }
 
     public List<UpdateCarRequestDTO> getMyPendingRequests(String username) {
         return approvalRepository.findByUsernameAndStatus(username, ApprovalStatus.PENDING)
-                .stream().map(this::mapToDTO).collect(Collectors.toList());
-    }
-
-    private CarResponseDTO mapToCarResponseDTO(Car car) {
-        boolean hasPending = false;
-        try {
-            List<CarUpdateApproval> pendings = approvalRepository.findByUsernameAndStatus(
-                    car.getOwner() != null ? car.getOwner().getUsername() : "", ApprovalStatus.PENDING);
-            hasPending = pendings.stream().anyMatch(p -> p.getCarId().equals(car.getId()));
-        } catch (Exception e) {}
-
-        return CarResponseDTO.builder()
-                .id(car.getId())
-                .manufacturer(car.getManufacturer())
-                .model(car.getModel())
-                .year(car.getYear())
-                .color(car.getColor())
-                .price(car.getPrice())
-                .mileage(car.getMileage())
-                .status(car.getStatus())
-                .isUsed(car.getMileage() != null && car.getMileage() > 0)
-                .hasPendingUpdate(hasPending)
-                .build();
-    }
-
-    private UpdateCarRequestDTO mapToDTO(CarUpdateApproval entity) {
-        Car car = carRepository.findById(entity.getCarId()).orElse(null);
-
-        return UpdateCarRequestDTO.builder()
-                .id(entity.getId())
-                .carId(entity.getCarId())
-                .username(entity.getUsername())
-
-                .newPrice(entity.getNewPrice())
-                .newColor(entity.getNewColor())
-                .newMileage(entity.getNewMileage())
-
-                .oldPrice(car != null ? car.getPrice() : 0.0)
-                .oldColor(car != null ? car.getColor() : "Bilinmiyor")
-                .oldMileage(car != null ? car.getMileage() : 0)
-
-                .status(entity.getStatus().name())
-                .manufacturer(car != null ? car.getManufacturer() : "Bilinmiyor")
-                .model(car != null ? car.getModel() : "Bilinmiyor")
-                .requestDate(entity.getRequestDate())
-                .build();
+                .stream()
+                .map(approval -> {
+                    Car car = carRepository.findById(approval.getCarId()).orElse(null);
+                    return approvalMapper.toDto(approval, car);
+                })
+                .toList();
     }
 }
